--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 
-
 body {
   margin: 0;
   font-family: 'Apple Chancery', sans-serif;
+  color: whitesmoke;
+  background-color: rgb(34, 46, 51);
 }
 
 .App {
@@ -10,7 +11,22 @@ body {
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 2px solid steelblue;
+  border: 2px solid whitesmoke;
   padding: 30px;
   border-radius: 6px;
+  background-color: rgb(39, 60, 69);
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.photo {
+  width: 300px;
+  height: 400px;
+  margin: 30px auto;
+  overflow: auto;
+  border: 2px solid whitesmoke;
 }
